--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -7,8 +7,8 @@ This is the website for the Dynamics Group at the <a href="https://www.simonsfou
 
 The Dynamics Group explores how collective dynamics driven by gravitational interactions shape structures — planets, stars and galaxies — in the universe. This topic sits at the crossroads between large observed and simulated datasets that describe these structures in the real and model universe.
 
-- Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Dynamics mailing list</a>
-- <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/dynamics/">CCA Dynamics page</a> on the Flatiron Institute site
+- Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Dynamics mailing list</a> to receive info about how to join our group meetings.
+- Also see the <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/dynamics/">CCA Dynamics page</a> on the Flatiron Institute site
 
 
 ## Events
