link to summer school

--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -19,5 +19,5 @@ The Dynamics Group explores how collective dynamics driven by gravitational inte
 
 ### Past
 
-- <a href="/summer-school">2021 Applied Galactic Dynamics School</a>
+- <a href="/SummerSchoolWebsite">2021 Applied Galactic Dynamics School</a>
 
