--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -15,9 +15,12 @@ The Dynamics Group explores how collective dynamics driven by gravitational inte
 
 ### Upcoming
 
-- Local Local Group Group (L2G2) meeting (dates TBD)
+- Local Local Group Group (L2G2) meeting: November 11
 
 ### Past
 
 - <a href="/SummerSchoolWebsite">2021 Applied Galactic Dynamics School</a>
+    - <a href="https://galacticdynamics.nyc/SummerSchoolHandbook/lectures.html">Lectures</a>
+    - <a href="https://github.com/CCADynamicsGroup/SummerSchoolWorkshops">Workshop materials</a>
+    - <a href="https://www.youtube.com/watch?v=h5Ernnhf6Gw&list=PLi9ucwAr3cbHCeUmJ9zOifCffaJJ8WEwy">Final presentations</a>
 
