--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -3,21 +3,19 @@ layout: post
 title: CCA Dynamics
 ---
 
-This is the website for the Dynamics Group at the <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics">Center for Computational Astrophysics</a> (CCA) at the <a href="https://www.simonsfoundation.org/flatiron/">Flatiron Institute</a> in New York City.
 
-The Dynamics Group explores how collective dynamics driven by gravitational interactions shape structures — planets, stars and galaxies — in the universe. This topic sits at the crossroads between large observed and simulated datasets that describe these structures in the real and model universe.
+The <a
+href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/dynamics/">Galactic
+Dynamics Group</a> at the <a
+href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics">Center
+for Computational Astrophysics</a> (CCA) explores how structures in the universe, such
+as dark matter and stellar halos, galaxy disks, and satellite galaxies and streams, are
+shaped by gravitational interactions and collective dynamics.
 
-- Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Dynamics mailing list</a> to receive info about how to join our group meetings.
-- Also see the <a href="https://www.simonsfoundation.org/flatiron/center-for-computational-astrophysics/dynamics/">CCA Dynamics page</a> on the Flatiron Institute site
+Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Dynamics mailing list</a> to receive info about how to join our monthly public group meetings (on the second Thursday of each month).
 
 
-## Events
-
-### Upcoming
-
-- Local Local Group Group (L2G2) meeting: November 11
-
-### Past
+## Past Events
 
 - <a href="/SummerSchoolWebsite">2021 Applied Galactic Dynamics School</a>
     - <a href="https://galacticdynamics.nyc/SummerSchoolHandbook/lectures.html">Lectures</a>
