--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CCA Dynamics
+title: Galactic Dynamics at the CCA
 ---
 
 
@@ -11,8 +11,16 @@ href="https://www.simonsfoundation.org/flatiron/center-for-computational-astroph
 for Computational Astrophysics</a> (CCA) explores how structures in the universe, such
 as dark matter and stellar halos, galaxy disks, and satellite galaxies and streams, are
 shaped by gravitational interactions and collective dynamics.
+Our work has a particular focus on <i>dynamical disequilibrium</i>, where we use theory,
+numerical simulations, and data analysis to studying the impact of mergers and
+time-dependent internal dynamical processes on the evolution of galaxies and the Milky
+Way.
+Our group makes heavy use of astrometric and stellar data from the <a
+href=https://sci.esa.int/web/gaia"><i>Gaia</i> Mission</a> and the <a
+href="https://www.sdss.org/">Sloan Digital Sky Survey</a> (APOGEE and SDSS-V surveys).
 
-Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Dynamics mailing list</a> to receive info about how to join our monthly public group meetings (on the second Thursday of each month).
+Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Galactic Dynamics
+mailing list</a> to receive info about how to join our monthly public group meetings.
 
 
 ## Past Events
