--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -15,7 +15,7 @@ Our work has a particular focus on <i>dynamical disequilibrium</i>, where we use
 numerical simulations, and data analysis to studying the impact of mergers and
 time-dependent internal dynamical processes on the evolution of galaxies and the Milky
 Way.
-Our group makes heavy use of astrometric and stellar data from the <a href="https://sci.esa.int/web/gaia"><i>Gaia</i> Mission</a> and the
+Our group makes heavy use of astrometric and stellar data from the <a href="https://sci.esa.int/web/gaia">Gaia Mission</a> and the
 <a href="https://www.sdss.org/">Sloan Digital Sky Survey</a> (APOGEE and SDSS-V surveys).
 
 Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Galactic Dynamics
