--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -22,10 +22,24 @@ Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Galactic Dyna
 mailing list</a> to receive info about how to join our monthly public group meetings.
 
 
-## Past Events
+## Pre-doctoral Students
+
+The CCA runs a program for graduate students to come for an extended (5 month) visit to collaborate with CCA researchers, the CCA Predoctoral Program (<a href="https://www.simonsfoundation.org/grant/flatiron-institute-center-for-computational-astrophysics-pre-doctoral-program-2021-689/">see this page</a> for an example of a past call for applications).
+The CCA Galactic Dynamics group is open to applications for predoctoral program projects during the yearly call for applications.
+We are interested in mentoring projects on topics like:
+
+    - Searching for signatures of dark matter substructure in the Milky Way (through, e.g., modeling the density structure of stellar streams),
+    - Quantifying the impact of time-dependent phenomena on the dynamical evolution of galaxies using numerical simulation and new analysis methods,
+    - Studying the global distortion of dark matter around the Milky Way due to the infall of the Magellanic Clouds and other satellite galaxies,
+    - Connecting stellar element abundance data with kinematic measurements to improve dynamical inferences,
+    - Interpreting kinematic signatures of resonances and time-dependence in the Milky Way using Gaia and SDSS-V data,
+    - Developing new methods to analyze stellar streams around external galaxies in anticipation of deep imaging data from the Rubin Observatory / LSST and the Roman Space Telescope.
+
+
+## Past Events and Meetings
 
 - <a href="/SummerSchoolWebsite">2021 Applied Galactic Dynamics School</a>
     - <a href="https://galacticdynamics.nyc/SummerSchoolHandbook/lectures.html">Lectures</a>
     - <a href="https://github.com/CCADynamicsGroup/SummerSchoolWorkshops">Workshop materials</a>
-    - <a href="https://www.youtube.com/watch?v=h5Ernnhf6Gw&list=PLi9ucwAr3cbHCeUmJ9zOifCffaJJ8WEwy">Final presentations</a>
+    <!-- - <a href="https://www.youtube.com/watch?v=h5Ernnhf6Gw&list=PLi9ucwAr3cbHCeUmJ9zOifCffaJJ8WEwy">Final presentations</a> -->
 
