--- a/_posts/2021-10-04-home.md
+++ b/_posts/2021-10-04-home.md
@@ -21,12 +21,7 @@ Our group makes heavy use of astrometric and stellar data from the <a href="http
 Join the <a href="https://groups.google.com/u/1/g/ccadynamics">CCA Galactic Dynamics
 mailing list</a> to receive info about how to join our monthly public group meetings.
 
-
-## Pre-doctoral Students
-
-The CCA runs a program for graduate students to come for an extended (5 month) visit to collaborate with CCA researchers, the CCA Predoctoral Program (<a href="https://www.simonsfoundation.org/grant/flatiron-institute-center-for-computational-astrophysics-pre-doctoral-program-2021-689/">see this page</a> for an example of a past call for applications).
-The CCA Galactic Dynamics group is open to applications for predoctoral program projects during the yearly call for applications.
-We are interested in mentoring projects on topics like:
+Example projects and research directions of the group include:
 
     - Searching for signatures of dark matter substructure in the Milky Way (through, e.g., modeling the density structure of stellar streams),
     - Quantifying the impact of time-dependent phenomena on the dynamical evolution of galaxies using numerical simulation and new analysis methods,
@@ -34,6 +29,12 @@ We are interested in mentoring projects on topics like:
     - Connecting stellar element abundance data with kinematic measurements to improve dynamical inferences,
     - Interpreting kinematic signatures of resonances and time-dependence in the Milky Way using Gaia and SDSS-V data,
     - Developing new methods to analyze stellar streams around external galaxies in anticipation of deep imaging data from the Rubin Observatory / LSST and the Roman Space Telescope.
+
+
+## Pre-doctoral Students
+
+The CCA runs a program for graduate students to come for an extended (5 month) visit to collaborate with CCA researchers, the CCA Predoctoral Program (<a href="https://www.simonsfoundation.org/grant/flatiron-institute-center-for-computational-astrophysics-pre-doctoral-program-2021-689/">see this page</a> for an example of a past call for applications).
+The CCA Galactic Dynamics group is open to applications for predoctoral program projects during the yearly call for applications, especially for projects that overlap with the broad interests of the group (listed above).
 
 
 ## Past Events and Meetings
